feito: melhoria da lógica
mudei toda a lógica

--- a/public/index.html
+++ b/public/index.html
@@ -16,23 +16,23 @@
         <div class="flex-box">
             <label for="quantidade">
                 Quantidade de caracteres
-                <input type="number" id="quantidade">
+                <input type="number" value="10" class="qtd">
             </label>
-            <label for="opcoes">
-                Números
-                <input type="checkbox" id="opcoes" class="opcoes" value="n">
+            <label for="opcoes1">
+                Letras minúsculas
+                <input type="checkbox" id="opcoes2" class="letras-minus" value="m">
             </label>
             <label for="opcoes2">
-                Letras minúsculas
-                <input type="checkbox" id="opcoes2" class="opcoes" value="m">
+                Letras maúsculas
+                <input type="checkbox" id="opcoes3" class="letras-maius" value="M">
             </label>
             <label for="opcoes3">
-                Letras maúsculas
-                <input type="checkbox" id="opcoes3" class="opcoes" value="M">
+                Números
+                <input type="checkbox" id="opcoes" class="numeros" value="n">
             </label>
             <label for="opcoes4">
-                Caracteres especiais
-                <input type="checkbox" id="opcoes4" class="opcoes" value="#">
+                Símbolos
+                <input type="checkbox" id="opcoes4" class="simbolos" value="#">
             </label>
             <button class="gerar-senha">Gerar senha</button>
         </div>
